fix: allow full image scroll on mobile, improve click position centering, restore scroll on close

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -910,9 +910,14 @@ a.product__text {
     align-items: flex-start;
   }
 
+  .product-media-modal__content {
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+  }
+
   .product-media-modal__content>img {
     width: 200vw;
-    margin-left: -50vw;
+    margin: 0;
   }
 }
 
